--- a/Dockerfile.static
+++ b/Dockerfile.static
@@ -14,12 +14,12 @@ COPY ./ /conteco/repo/
 ##### BEGIN image/Dockerfile/env-labels-footer #####
 ENV CONTECO_TYPE="module" \
     CONTECO_NAME="schema_registry" \
-    CONTECO_TAG="v1.0.0" \
+    CONTECO_TAG="5.4.0" \
     CONTECO_BASE="image.wrapper" \
     CONTECO_BUILD="image"
 LABEL io.vcweb.type="module" \
       io.vcweb.name="schema_registry" \
-      io.vcweb.tag="v1.0.0" \
+      io.vcweb.tag="5.4.0" \
       io.vcweb.base="image.wrapper" \
       io.vcweb.build="image" \
       io.vcweb.label="module.schema_registry - ContEco" \
