--- a/conteco/docker-compose/environment.template
+++ b/conteco/docker-compose/environment.template
@@ -2,6 +2,10 @@
 
 # START SETTINGS schema_registry.base
 export CONTECO_DC_SCHEMA_REGISTRY_PORTS="8081:8081"
+export CONTECO_DC_SCHEMA_REGISTRY_CONNECT_LABELS=
+export CONTECO_DC_SCHEMA_REGISTRY_CONNECT_DEPLOY_LABELS=
+export CONTECO_DC_SCHEMA_REGISTRY_CONNECT_DEPLOY_REPLICAS=1
+export CONTECO_DC_SCHEMA_REGISTRY_CONNECT_DEPLOY_PLACEMENT_CONSTRAINTS=
 export CONTECO_DC_SCHEMA_REGISTRY_DEPLOY_RESOURCES_LIMITS_CPUS=
 export CONTECO_DC_SCHEMA_REGISTRY_DEPLOY_RESOURCES_RESERVATIONS_CPUS="0.1"
 export CONTECO_DC_SCHEMA_REGISTRY_DEPLOY_RESOURCES_LIMITS_MEMORY="512m"
@@ -11,6 +15,10 @@ export CONTECO_DC_SCHEMA_REGISTRY_DEPLOY_RESOURCES_RESERVATIONS_MEMORY="256m"
 export CONTECO_DC_SCHEMA_REGISTRY_EXT_REST_ENVIRONMENT_CONF_PATH="/${CONTECO_URLPREFIX}/streamsets"
 export CONTECO_DC_SCHEMA_REGISTRY_EXT_REST_ENVIRONMENT_CONF_UPSTREAM="${CONTECO_STACKPREFIX}_streamsets:18630"
 export CONTECO_DC_SCHEMA_REGISTRY_EXT_REST_DEPLOY_LABELS="traefik.enable=true,traefik.docker.network=${CONTECO_NETWORKGLOBAL}_overlay, traefik.http.services.${CONTECO_STACKPREFIX}_nginx.loadbalancer.server.port=80, traefik.http.routers.${CONTECO_STACKPREFIX}_nginx.entrypoints=conteco, traefik.http.routers.${CONTECO_STACKPREFIX}_nginx.rule=PathPrefix(\"/${CONTECO_URLPREFIX}/streamsets\")"
+export CONTECO_DC_SCHEMA_REGISTRY_EXT_REST_LABELS=
+export CONTECO_DC_SCHEMA_REGISTRY_EXT_REST_DEPLOY_LABELS=
+export CONTECO_DC_SCHEMA_REGISTRY_EXT_REST_DEPLOY_REPLICAS=1
+export CONTECO_DC_SCHEMA_REGISTRY_EXT_REST_DEPLOY_PLACEMENT_CONSTRAINTS=
 export CONTECO_DC_SCHEMA_REGISTRY_EXT_REST_DEPLOY_RESOURCES_LIMITS_CPUS=
 export CONTECO_DC_SCHEMA_REGISTRY_EXT_REST_DEPLOY_RESOURCES_RESERVATIONS_CPUS="0.1"
 export CONTECO_DC_SCHEMA_REGISTRY_EXT_REST_DEPLOY_RESOURCES_LIMITS_MEMORY="64m"
