--- a/conteco/docker-compose/stacks/conteco_dc_schema_registry.docker-compose.yml.template
+++ b/conteco/docker-compose/stacks/conteco_dc_schema_registry.docker-compose.yml.template
@@ -12,6 +12,7 @@ services:
     networks: [${CONTECO_NETWORKLOCAL}_overlay]
     deploy:
       mode: replicated
+      replicas: ${CONTECO_DC_SCHEMA_REGISTRY_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${CONTECO_DC_SCHEMA_REGISTRY_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${CONTECO_DC_SCHEMA_REGISTRY_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${CONTECO_DC_SCHEMA_REGISTRY_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${CONTECO_DC_SCHEMA_REGISTRY_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: []
+    labels: [${CONTECO_DC_SCHEMA_REGISTRY_LABELS}]
 # END SERVICE schema_registry.base
 
 volumes: {${CONTECO_STACKPREFIX}_schema_registry_secrets_volume: { external: true }}
